[project]
name = "etl-dengue"
version = "0.1.0"
description = ""
authors = [
    {name = "vini-bgs", email = "viniciustheros@gmail.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.11,<4.0"
loguru = "^0.7.3"
pandas = "^3.0.3"
tqdm = "^4.68.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
